# HR-Demography-Bot

./: .gitignore  Dockerfile  Jenkinsfile  README.md  db_update.py  docker-compose.yml  entrypoints.sh  llm_engine.py  main.py  pyproject.toml  requirements.txt  sonar-project.properties
lib/: prompt.py
tests/: test_main.py
